; ModuleID = '/home/carl/AnghaBench/Quake-III-Arena/code/qcommon/extr_msg.c_MSG_WriteDeltaKeyFloat.c'
source_filename = "/home/carl/AnghaBench/Quake-III-Arena/code/qcommon/extr_msg.c_MSG_WriteDeltaKeyFloat.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @MSG_WriteDeltaKeyFloat(i32* %0, i32 %1, float %2, float %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca float, align 4
  %8 = alloca float, align 4
  store i32* %0, i32** %5, align 8
  store i32 %1, i32* %6, align 4
  store float %2, float* %7, align 4
  store float %3, float* %8, align 4
  %9 = load float, float* %7, align 4
  %10 = load float, float* %8, align 4
  %11 = fcmp oeq float %9, %10
  br i1 %11, label %12, label %15

12:                                               ; preds = %4
  %13 = load i32*, i32** %5, align 8
  %14 = call i32 @MSG_WriteBits(i32* %13, i32 0, i32 1)
  br label %24

15:                                               ; preds = %4
  %16 = load i32*, i32** %5, align 8
  %17 = call i32 @MSG_WriteBits(i32* %16, i32 1, i32 1)
  %18 = load i32*, i32** %5, align 8
  %19 = bitcast float* %8 to i32*
  %20 = load i32, i32* %19, align 4
  %21 = load i32, i32* %6, align 4
  %22 = xor i32 %20, %21
  %23 = call i32 @MSG_WriteBits(i32* %18, i32 %22, i32 32)
  br label %24

24:                                               ; preds = %15, %12
  ret void
}

declare dso_local i32 @MSG_WriteBits(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
